# PTCGProject

./: .gitignore  CHANGELOG.md  LICENSE.md  NOTICE.md  PTCGProject.code-workspace  README.md
.github/workflows/: ci.yml
Lib/Engine/: README.md  pyproject.toml
Lib/Engine/ptcgengine/: __init__.py  action_generation.py  actions.py  api.py  card_identity.py  card_instance.py  card_models.py  cards.py  context.py  deck.py  energy.py  errors.py  events.py  expressions.py  filters.py  interpreter.py  primitives.py  registry.py  selectors.py  serialization.py  state.py  trainer.py  turn_manager.py  utils.py  view.py
Lib/Engine/ptcgengine/cards/: card_db.json
Lib/Engine/tests/: test_card_identity.py  test_deck_and_trainer.py  test_engine.py  test_turns.py
World/: .ruff.toml  README.md  combined_diff_tests.txt  diag.py  game_config.py  main.py  main_clone.py  models.py  ptcgengine.pth  requirements.txt  scene_manager.py
World/classes/: attack.py  card.py  card_manager.py  deck.py  energy.py  entity.py  image_downloader.py  pokemon.py  save_manager.py  trainer.py
World/core/: trainer_loader.py
World/data/: player_collection.json
World/scenes/: base_scene.py  battle_scene.py  overworld_scene.py  title_scene.py
World/tests/: conftest.py  test_base_scene.py  test_battle_scene_actions.py  test_battle_scene_smoke.py  test_battle_ui_scaffolding.py  test_card_rendering.py  test_deck.py  test_engine_card_instance_import.py  test_engine_import.py  test_event_logging.py  test_overworld_scene_smoke.py  test_overworld_trigger.py  test_overworld_trigger_extended.py  (+2 more)
(+28 files in other folders)
