[project]
name = "ptcgengine"
version = "0.1.0"
description = "Declarative Pokemon TCG rules engine."
authors = [
    { name = "Dylan Leisler", email = "PTCGProject@proton.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
homepage = "https://github.com/DylanLeisler/PTCGProject"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["ptcgengine*"] }

[tool.setuptools.package-data]
ptcgengine = ["cards/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "E402", "E701"]
